=========================================================================
CHANGE LOG
=========================================================================

2007-12-04  Warren L. DeLano <warren@delsci.com>	

	* added additional workaround for reading tricky PQR files
	
	* cartoon_ring_mode can now be set per-atom (per-residue, really)
		
2007-11-30  Warren L. DeLano <warren@delsci.com>	

	* ANISOU records now supported in PDB files

        * ellipsoid representation (show ellipsoid, if ANISOU provided)

2007-11-29  Warren L. DeLano <warren@delsci.com>	

	* restored Tcl8.3 compatibility with file open
	
2007-11-28  Warren L. DeLano <warren@delsci.com>	

	* added support for simple raster3d ellipsoids (rastep compat.)
	
2007-11-27  Warren L. DeLano <warren@delsci.com>	

	* warning added for attempted bond creation between objects
	
2007-11-19  Warren L. DeLano <warren@delsci.com>

	* validated binary GRD reader (versus GVIEW with .kont files)
	
	* fixed crash bug with errorneous pseudoatom input
	
2007-11-16  Warren L. DeLano <warren@delsci.com>

	* fixed bug in binary .grd reader code (or NOT...still unclear)
	
2007-11-11  Warren L. DeLano <warren@delsci.com>

	* retain_order is now object-specific

	* restricted geom rebuilds after mask
	
2007-10-31  Warren L. DeLano <warren@delsci.com>

	* added a couple of new CGO examples
	
2007-10-30  Warren L. DeLano <warren@delsci.com>

	* direct SDF output for single and multi-state objects
	
2007-10-29  Warren L. DeLano <warren@delsci.com>

	* added workaround for writing PQR files with long coordinates
	
2007-10-29  Warren L. DeLano <warren@delsci.com>

	* improved memory consumption when rendering lots of triangles
	
2007-10-28  Warren L. DeLano <warren@delsci.com>

	* implemented changed to help support MAEstro format

	* colorspaces now apply to ramps as well
	
2007-10-24  Warren L. DeLano <warren@delsci.com>

	* quashed session save bug discovered by GT (PyNone refcnting)
	